# amazon-bedrock-agentcore-samples

./: .gitignore  README.md  requirements.txt
.github/: pull_request_template.md
.github/CONTRIBUTING_TEMPLATE/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_improvement.md  example_request.md
01-tutorials/: README.md  requirements.txt  utils.py
02-use-cases/SRE-agent/: .env.example  .gitignore  Dockerfile  Dockerfile.x86_64  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  verify_report.py
02-use-cases/SRE-agent/backend/: config_utils.py
02-use-cases/SRE-agent/backend/data/: all_data_dump.txt
02-use-cases/SRE-agent/backend/data/k8s_data/: events.json  nodes.json  pods.json  services.json
02-use-cases/SRE-agent/backend/data/logs_data/: log_counts.json
02-use-cases/SRE-agent/backend/data/metrics_data/: availability.json  resource_usage.json  trends.json
02-use-cases/SRE-agent/backend/data/runbooks_data/: common_resolutions.json  incident_playbooks.json  troubleshooting_guides.json
02-use-cases/SRE-agent/backend/data/runbooks_data/markdown/: incident_playbooks.md  troubleshooting_guides.md
02-use-cases/SRE-agent/backend/openapi_specs/: generate_specs.sh  k8s_api.yaml.template  logs_api.yaml.template  metrics_api.yaml  metrics_api.yaml.template  runbooks_api.yaml.template
02-use-cases/SRE-agent/backend/scripts/: stop_demo_backend.sh
02-use-cases/SRE-agent/backend/servers/: k8s_server.py  logs_server.py  metrics_server.py  retrieve_api_key.py  run_all_servers.py  runbooks_server.py  server.py  stop_servers.py
02-use-cases/SRE-agent/deployment/: build_and_deploy.sh  deploy_agent_runtime.py  invoke_agent_runtime.py  setup_cognito.sh
02-use-cases/SRE-agent/docs/: auth.md  blog_post.md  configuration.md  demo-environment.md  deployment-guide.md  development.md  ec2-port-configuration.md  example-use-cases.md  memory-system.md  security.md  sre_agent_architecture.md  system-components.md
02-use-cases/SRE-agent/docs/examples/: API_response_times_have_degraded_3x_in_the_last_hour_user_id_Alice_20250802_163136.md  API_response_times_have_degraded_3x_in_the_last_hour_user_id_Carol_20250802_163547.md  Memory_System_Analysis_User_Personalization_20250802_162648.md  api-response-time-analysis.md  flight-booking-analysis.md
02-use-cases/SRE-agent/gateway/: README.md  config.yaml.example  create_credentials_provider.py  create_gateway.sh  generate_token.py  generate_token.sh  main.py  observability.py
02-use-cases/SRE-agent/scripts/: cleanup.sh  configure_gateway.sh  manage_memories.py  run_readme_prompts.sh  user_config.yaml
02-use-cases/SRE-agent/sre_agent/: .env.example  agent_nodes.py  agent_runtime.py  agent_state.py  cli.py  constants.py  graph_builder.py  llm_utils.py  logging_config.py  multi_agent_langgraph.py  output_formatter.py  prompt_loader.py  supervisor.py
02-use-cases/SRE-agent/sre_agent/config/: agent_config.yaml
02-use-cases/SRE-agent/sre_agent/config/prompts/: agent_base_prompt.txt  data_pattern_guide.txt  executive_summary_system.txt  executive_summary_user_template.txt  kubernetes_agent_prompt.txt  logs_agent_prompt.txt  metrics_agent_prompt.txt  runbooks_agent_prompt.txt  supervisor_aggregation_system.txt  supervisor_fallback_prompt.txt  supervisor_multi_agent_prompt.txt  supervisor_plan_aggregation.txt  supervisor_planning_prompt.txt  supervisor_standard_aggregation.txt
02-use-cases/SRE-agent/sre_agent/memory/: __init__.py  client.py  config.py  conversation_manager.py  hooks.py  strategies.py  tools.py
02-use-cases/SRE-agent/tests/integration/: test_memory_integration.py
02-use-cases/SRE-agent/tests/unit/memory/: __init__.py  test_config.py  test_strategies.py  test_tools.py
(+568 files in other folders)
